--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 	</header>
 
 	<main>
-		<section class="hero">
+
+		<section class="hero background-hero">
+
 			<div class="hero-conteiner container">
 				<h1 class="hero-title">
 					Effective Solutions <br />
@@ -56,12 +58,21 @@
 					<button type="button" class="button-hero">Order Service</button>
 				</div>
 			</div>
+
+
+
+
 		</section>
 		<section class="features section">
 			<div class="features-container container">
 				<h2 class="visually-hidden">Features</h2>
 				<ul class="features-list list">
 					<li class="features-item">
+						<div class="features-icon-list">
+							<svg class="features-icon">
+								<use href="./images/symbol-defs.svg#icon-antenna"></use>
+							</svg>
+						</div>
 						<h3 class="features-header">Strategy</h3>
 						<p class="features-paragraph">
 							Our goal is to identify the business problem to walk away with the
@@ -70,6 +81,11 @@
 					</li>
 
 					<li class="features-item">
+						<div class="features-icon-list">
+							<svg class="features-icon">
+								<use href="./images/symbol-defs.svg#icon-clock"></use>
+							</svg>
+						</div>
 						<h3 class="features-header">Punctuality</h3>
 						<p class="features-paragraph">
 							Bring the key message to the brand's audience for the best price within the shortest
@@ -78,6 +94,11 @@
 						</p>
 					</li>
 					<li class="features-item">
+						<div class="features-icon-list">
+							<svg class="features-icon">
+								<use href="./images/symbol-defs.svg#icon-diagram"></use>
+							</svg>
+						</div>
 						<h3 class="features-header">Punctuality</h3>
 						<p class="features-paragraph">
 							Bring the key message to the brand's audience for the best price
@@ -85,6 +106,11 @@
 						</p>
 					</li>
 					<li class="features-item">
+						<div class="features-icon-list">
+							<svg class="features-icon">
+								<use href="./images/symbol-defs.svg#icon-astronaut"></use>
+							</svg>
+						</div>
 						<h3 class="features-header">Technologies</h3>
 						<p class="features-paragraph">
 							Design practice focused on digital experiences. We bring forth a
@@ -118,12 +144,56 @@
 							<h3 class="team-header">Mark Guerrero</h3>
 							<p class="team-paragraph">Product Designer</p>
 						</div>
+						<div class="team-icons">
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-instateam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-linkteam"></use>
+								</svg>
+							</a>
+						</div>
 					</li>
 					<li class="team-item">
 						<img src="./images/team2.jpg" alt="teamlogo2" width="264" />
 						<div class="content-team">
 							<h3 class="team-header">Tom Ford</h3>
 							<p class="team-paragraph">Frontend Developer</p>
+						</div>
+						<div class="team-icons">
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-instateam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-linkteam"></use>
+								</svg>
+							</a>
 						</div>
 					</li>
 					<li class="team-item">
@@ -132,6 +202,28 @@
 							<h3 class="team-header">Camila Garcia</h3>
 							<p class="team-paragraph">Marketing</p>
 						</div>
+						<div class="team-icons">
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-instateam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-linkteam"></use>
+								</svg>
+							</a>
+						</div>
 					</li>
 					<li class="team-item">
 						<img src="./images/team4.jpg" alt="teamlogo4" width="264" />
@@ -139,21 +231,102 @@
 							<h3 class="team-header">Daniel Wilson</h3>
 							<p class="team-paragraph">UI Designer</p>
 						</div>
+						<div class="team-icons">
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-instateam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
+								</svg>
+							</a>
+							<a href="#">
+								<svg class="icon-team">
+									<use href="./images/symbol-defs.svg#icon-linkteam"></use>
+								</svg>
+							</a>
+						</div>
 					</li>
 				</ul>
+			</div>
+		</section>
+		<section class="customers-section">
+			<h2 class="customers-header">Customers</h2>
+			<div class="customers-icons">
+				<a class="icon-link" href="#">
+					<svg class="icon-customers">
+						<use href="./images/symbol-defs.svg#icon-Logo"></use>
+					</svg>
+				</a>
+				<a class="icon-link" href="#">
+					<svg class="icon-customers">
+						<use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+					</svg>
+				</a>
+				<a class="icon-link" href="#">
+					<svg class="icon-customers">
+						<use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+					</svg>
+				</a>
+				<a class="icon-link" href="#">
+					<svg class="icon-customers">
+						<use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+					</svg>
+				</a>
+				<a class="icon-link" href="#">
+					<svg class="icon-customers">
+						<use href="./images/symbol-defs.svg#icon-Logo-4"></use>
+					</svg>
+				</a>
+				<a class="icon-link" href="#">
+					<svg class="icon-customers">
+						<use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+					</svg>
+				</a>
 			</div>
 		</section>
 	</main>
 	<footer class="footer">
 		<div class="footer-container container">
-			<div class="footer-link"><a class="link" href="./index.html"><span
-						class="web-footer">WEB</span><span class="studio-footer">STUDIO</span></a>
+			<div class="footer-contant">
+				<a class="link" href="./index.html"><span class="web-footer">WEB</span><span
+						class="studio-footer">STUDIO</span></a>
+				<p class="footer-paragraph">Increase the flow of customers and sales for your business with
+					digital marketing & growth solutions.
+				</p>
 			</div>
-			<p class="footer-paragraph">
-				Increase the flow of customers and sales for your business with digital
-				marketing & growth solutions.
-			</p>
-		</div>
+			<div">
+				<h2 class="footer-header">Social media</h2>
+				<div class="footer-container-icons">
+					<a href="#" class="link-icons">
+						<svg class="icon-svg-footer">
+							<use href="./images/symbol-defs.svg#icon-instagramfoot"></use>
+						</svg>
+					</a>
+					<a href="#" class="link-icons">
+						<svg class="icon-svg-footer">
+							<use href="./images/symbol-defs.svg#icon-twitterfoot"></use>
+						</svg>
+					</a>
+					<a href="#" class="link-icons">
+						<svg class="icon-svg-footer">
+							<use href="./images/symbol-defs.svg#icon-facebookfoot"></use>
+						</svg>
+					</a>
+					<a href="#" class="link-icons">
+						<svg class="icon-svg-footer">
+							<use href="./images/symbol-defs.svg#icon-linkedinfoot"></use>
+						</svg>
+					</a>
+				</div>
+			</div>
 	</footer>
 </body>
 
