--- a/portfolio.html
+++ b/portfolio.html
@@ -159,14 +159,38 @@
 	</main>
 	<footer class="footer">
 		<div class="footer-container container">
-			<div class="footer-link"><a class="link" href="./index.html"><span class="web-footer">WEB</span><span
+			<div class="footer-contant">
+				<a class="link" href="./index.html"><span class="web-footer">WEB</span><span
 						class="studio-footer">STUDIO</span></a>
+				<p class="footer-paragraph">Increase the flow of customers and sales for your business with
+					digital marketing & growth solutions.
+				</p>
 			</div>
-			<p class="footer-paragraph">
-				Increase the flow of customers and sales for your business with digital
-				marketing & growth solutions.
-			</p>
-		</div>
+			<div">
+				<h2 class="footer-header">Social media</h2>
+				<div class="footer-container-icons">
+					<a href="#" class="link-icons">
+						<svg class="icon-svg-footer">
+							<use href="./images/symbol-defs.svg#icon-linkedinfoot"></use>
+						</svg>
+					</a>
+					<a href="#" class="link-icons">
+						<svg class="icon-svg-footer">
+							<use href="./images/symbol-defs.svg#icon-twitterfoot"></use>
+						</svg>
+					</a>
+					<a href="#" class="link-icons">
+						<svg class="icon-svg-footer">
+							<use href="./images/symbol-defs.svg#icon-facebookfoot"></use>
+						</svg>
+					</a>
+					<a href="#" class="link-icons">
+						<svg class="icon-svg-footer">
+							<use href="./images/symbol-defs.svg#icon-linkedinfoot"></use>
+						</svg>
+					</a>
+				</div>
+			</div>
 	</footer>
 </body>
 
