--- a/index.html
+++ b/index.html
@@ -105,11 +105,13 @@
 							within the shortest possible time.
 						</p>
 					</li>
+
 					<li class="features-item">
 						<div class="features-icon-list">
 							<svg class="features-icon">
 								<use href="./images/symbol-defs.svg#icon-astronaut"></use>
 							</svg>
+
 						</div>
 						<h3 class="features-header">Technologies</h3>
 						<p class="features-paragraph">
@@ -143,115 +145,152 @@
 						<div class="content-team">
 							<h3 class="team-header">Mark Guerrero</h3>
 							<p class="team-paragraph">Product Designer</p>
+							<ul class="team-icons list">
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-instagramteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-linkedinteam"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
-						<div class="team-icons">
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-instateam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-linkteam"></use>
-								</svg>
-							</a>
-						</div>
+
 					</li>
 					<li class="team-item">
 						<img src="./images/team2.jpg" alt="teamlogo2" width="264" />
 						<div class="content-team">
 							<h3 class="team-header">Tom Ford</h3>
 							<p class="team-paragraph">Frontend Developer</p>
+							<ul class="team-icons list">
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-instagramteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-linkedinteam"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
-						<div class="team-icons">
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-instateam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-linkteam"></use>
-								</svg>
-							</a>
-						</div>
+
 					</li>
 					<li class="team-item">
 						<img src="./images/team3.jpg" alt="teamlogo3" width="264" />
 						<div class="content-team">
 							<h3 class="team-header">Camila Garcia</h3>
 							<p class="team-paragraph">Marketing</p>
+
+							<ul class="team-icons list">
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-instagramteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-linkedinteam"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
-						<div class="team-icons">
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-instateam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-linkteam"></use>
-								</svg>
-							</a>
-						</div>
+
 					</li>
 					<li class="team-item">
 						<img src="./images/team4.jpg" alt="teamlogo4" width="264" />
 						<div class="content-team">
 							<h3 class="team-header">Daniel Wilson</h3>
 							<p class="team-paragraph">UI Designer</p>
-						</div>
-						<div class="team-icons">
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-instateam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
-								</svg>
-							</a>
-							<a href="#">
-								<svg class="icon-team">
-									<use href="./images/symbol-defs.svg#icon-linkteam"></use>
-								</svg>
-							</a>
+
+							<ul class="team-icons list">
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-instagramteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-twiterteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-facebookteam"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="team-icon-item">
+										<svg class="icon-team">
+											<use href="./images/symbol-defs.svg#icon-linkedinteam"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</li>
 				</ul>
@@ -260,36 +299,50 @@
 		<section class="customers-section">
 			<h2 class="customers-header">Customers</h2>
 			<div class="customers-icons">
-				<a class="icon-link" href="#">
-					<svg class="icon-customers">
-						<use href="./images/symbol-defs.svg#icon-Logo"></use>
-					</svg>
-				</a>
-				<a class="icon-link" href="#">
-					<svg class="icon-customers">
-						<use href="./images/symbol-defs.svg#icon-Logo-1"></use>
-					</svg>
-				</a>
-				<a class="icon-link" href="#">
-					<svg class="icon-customers">
-						<use href="./images/symbol-defs.svg#icon-Logo-2"></use>
-					</svg>
-				</a>
-				<a class="icon-link" href="#">
-					<svg class="icon-customers">
-						<use href="./images/symbol-defs.svg#icon-Logo-3"></use>
-					</svg>
-				</a>
-				<a class="icon-link" href="#">
-					<svg class="icon-customers">
-						<use href="./images/symbol-defs.svg#icon-Logo-4"></use>
-					</svg>
-				</a>
-				<a class="icon-link" href="#">
-					<svg class="icon-customers">
-						<use href="./images/symbol-defs.svg#icon-Logo-5"></use>
-					</svg>
-				</a>
+				<ul class="customers-list list">
+					<li class="customers-item">
+						<a href="#" class="customers-link">
+							<svg class="svg-customers">
+								<use href="./images/symbol-defs.svg#icon-Logo"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="customers-item">
+						<a href="#" class="customers-link">
+							<svg class="svg-customers">
+								<use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="customers-item">
+						<a href="#" class="customers-link">
+							<svg class="svg-customers">
+								<use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="customers-item">
+						<a href="#" class="customers-link">
+							<svg class="svg-customers">
+								<use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="customers-item">
+						<a href="#" class="customers-link">
+							<svg class="svg-customers">
+								<use href="./images/symbol-defs.svg#icon-Logo-4"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="customers-item">
+						<a href="#" class="customers-link">
+							<svg class="svg-customers">
+								<use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+							</svg>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</section>
 	</main>
@@ -302,29 +355,39 @@
 					digital marketing & growth solutions.
 				</p>
 			</div>
-			<div">
+			<div class="social-media">
 				<h2 class="footer-header">Social media</h2>
 				<div class="footer-container-icons">
-					<a href="#" class="link-icons">
-						<svg class="icon-svg-footer">
-							<use href="./images/symbol-defs.svg#icon-instagramfoot"></use>
-						</svg>
-					</a>
-					<a href="#" class="link-icons">
-						<svg class="icon-svg-footer">
-							<use href="./images/symbol-defs.svg#icon-twitterfoot"></use>
-						</svg>
-					</a>
-					<a href="#" class="link-icons">
-						<svg class="icon-svg-footer">
-							<use href="./images/symbol-defs.svg#icon-facebookfoot"></use>
-						</svg>
-					</a>
-					<a href="#" class="link-icons">
-						<svg class="icon-svg-footer">
-							<use href="./images/symbol-defs.svg#icon-linkedinfoot"></use>
-						</svg>
-					</a>
+					<ul class="social-list list">
+						<li class="social-item">
+							<a href="#" class="link-icons">
+								<svg class="icon-svg-footer">
+									<use href="./images/symbol-defs.svg#icon-instagramfoot"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-item list">
+							<a href="#" class="link-icons">
+								<svg class="icon-svg-footer">
+									<use href="./images/symbol-defs.svg#icon-twitterfoot"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-item list">
+							<a href="#" class="link-icons">
+								<svg class="icon-svg-footer">
+									<use href="./images/symbol-defs.svg#icon-facebookfoot"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-item list">
+							<a href="#" class="link-icons">
+								<svg class="icon-svg-footer">
+									<use href="./images/symbol-defs.svg#icon-linkedinfoot"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 	</footer>
