--- a/index.html
+++ b/index.html
@@ -356,34 +356,34 @@
 				</p>
 			</div>
 			<div class="social-media">
-				<h2 class="footer-header">Social media</h2>
+				<p class="footer-header"> Social media</p>
 				<div class="footer-container-icons">
 					<ul class="social-list list">
 						<li class="social-item">
 							<a href="#" class="link-icons">
 								<svg class="icon-svg-footer">
-									<use href="./images/symbol-defs.svg#icon-instagramfoot"></use>
+									<use href="./images/symbol-defs2 (2).svg#icon-instagram-2"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="social-item list">
 							<a href="#" class="link-icons">
 								<svg class="icon-svg-footer">
-									<use href="./images/symbol-defs.svg#icon-twitterfoot"></use>
+									<use href="./images/symbol-defs2 (2).svg#icon-twitter-1"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="social-item list">
 							<a href="#" class="link-icons">
 								<svg class="icon-svg-footer">
-									<use href="./images/symbol-defs.svg#icon-facebookfoot"></use>
+									<use href="./images/symbol-defs2 (2).svg#icon-facebook-1"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="social-item list">
 							<a href="#" class="link-icons">
 								<svg class="icon-svg-footer">
-									<use href="./images/symbol-defs.svg#icon-linkedinfoot"></use>
+									<use href="./images/symbol-defs2 (2).svg#icon-linkedin-1"></use>
 								</svg>
 							</a>
 						</li>
