--- a/portfolio.html
+++ b/portfolio.html
@@ -166,29 +166,39 @@
 					digital marketing & growth solutions.
 				</p>
 			</div>
-			<div">
-				<h2 class="footer-header">Social media</h2>
+			<div class="social-media">
+				<p class="footer-header"> Social media</p>
 				<div class="footer-container-icons">
-					<a href="#" class="link-icons">
-						<svg class="icon-svg-footer">
-							<use href="./images/symbol-defs.svg#icon-linkedinfoot"></use>
-						</svg>
-					</a>
-					<a href="#" class="link-icons">
-						<svg class="icon-svg-footer">
-							<use href="./images/symbol-defs.svg#icon-twitterfoot"></use>
-						</svg>
-					</a>
-					<a href="#" class="link-icons">
-						<svg class="icon-svg-footer">
-							<use href="./images/symbol-defs.svg#icon-facebookfoot"></use>
-						</svg>
-					</a>
-					<a href="#" class="link-icons">
-						<svg class="icon-svg-footer">
-							<use href="./images/symbol-defs.svg#icon-linkedinfoot"></use>
-						</svg>
-					</a>
+					<ul class="social-list list">
+						<li class="social-item">
+							<a href="#" class="link-icons">
+								<svg class="icon-svg-footer">
+									<use href="./images/symbol-defs2 (2).svg#icon-instagram-2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-item list">
+							<a href="#" class="link-icons">
+								<svg class="icon-svg-footer">
+									<use href="./images/symbol-defs2 (2).svg#icon-twitter-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-item list">
+							<a href="#" class="link-icons">
+								<svg class="icon-svg-footer">
+									<use href="./images/symbol-defs2 (2).svg#icon-facebook-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-item list">
+							<a href="#" class="link-icons">
+								<svg class="icon-svg-footer">
+									<use href="./images/symbol-defs2 (2).svg#icon-linkedin-1"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 	</footer>
